@@ -6,7 +6,7 @@
 #define SVN_VERSION
 
 #ifndef SVN_VERSION
-#define GUAYADEQUE_VERSION "v0.0.5($DATE)" GUAYADEQUE_STATUS
+#define GUAYADEQUE_VERSION "v0.0.4($DATE)" GUAYADEQUE_STATUS
 #else
 #define GUAYADEQUE_VERSION "svn($DATE)" GUAYADEQUE_STATUS
 #endif
